--- a/index.css
+++ b/index.css
@@ -53,10 +53,17 @@ nav a {
 nav a:hover {
   color: #E00073;
 }
+nav #hamburger {
+  color: white;
+}
 
 @media screen and (min-width: 601px) {
   nav {
     justify-content: center;
+  }
+
+  #hamburger {
+    display: none;
   }
 }
 @media screen and (max-width: 600px) {
@@ -70,9 +77,12 @@ nav a:hover {
     padding: 2px 10px;
     display: none;
   }
-
-  nav:hover a {
+  nav #hamburger {
     display: block;
+  }
+  nav #hamburger:hover {
+    color: #E00073;
+    cursor: pointer;
   }
 }
 footer {
@@ -218,6 +228,12 @@ footer a:hover {
     background: linear-gradient(0deg, rgba(26, 5, 32, 0) 0%, rgba(26, 5, 32, 0)), url("images/sunset-7.png");
     background-size: 100vw;
   }
+  .landing .heading-container {
+    width: 60%;
+  }
+  .landing .heading-container h1 {
+    font-size: 48pt;
+  }
 }
 .landing {
   width: 100vw;
@@ -236,15 +252,15 @@ footer a:hover {
   align-items: center;
 }
 .landing .landing-container .heading-container {
-  width: 60%;
-  padding: 50px;
+  width: 90%;
+  padding: 20px;
   margin-top: 50px;
 }
 .landing .landing-container h1 {
   color: white;
   display: block;
   text-align: center;
-  font-size: 54pt;
+  font-size: 40pt;
   margin-bottom: 20px;
 }
 .landing .landing-container a {
