--- a/index.scss
+++ b/index.scss
@@ -6,6 +6,12 @@
     .landing {
         background: linear-gradient(0deg, rgba(26, 5, 32, 0.0) 0%, rgba(26, 5, 32, 0.0)), url("images/sunset-7.png");
         background-size: 100vw;
+        .heading-container {
+            width: 60%;
+            h1 {
+                font-size: 48pt;
+            }
+        }
     }
     
 }
@@ -25,15 +31,15 @@
         flex-direction: column;
         align-items: center;
         .heading-container {
-            width: 60%;
-            padding: 50px;
+            width: 90%;
+            padding: 20px;
             margin-top: 50px;
         }
         h1 {
             color: white;
             display: block;
             text-align: center;
-            font-size: 54pt;
+            font-size: 40pt;
             margin-bottom: 20px;
         }
         a {
