--- a/styles.scss
+++ b/styles.scss
@@ -53,12 +53,18 @@ nav {
     a:hover {
         color: #E00073;
     }
+    #hamburger {
+        color: white;
+    }
 
 }
 
 @media screen and (min-width: 601px) {
     nav {
         justify-content: center;       
+    }
+    #hamburger {
+        display: none;
     }
 }
 
@@ -73,11 +79,19 @@ nav {
             padding: 2px 10px;
             display: none;
         }
+        #hamburger {
+            display: block;
+        }
+
+        #hamburger:hover {
+            color: #E00073;
+            cursor: pointer;
+        }
     }  
 
-    nav:hover a {  
-        display: block;       
-    }
+    // nav:hover a {  
+    //     display: block;       
+    // }
 }
 
 
