--- a/index.css
+++ b/index.css
@@ -42,47 +42,64 @@ nav {
   z-index: 10;
   align-items: center;
   background-color: #1a0520;
+  min-height: 50px;
 }
-nav a {
+nav .nav-links-container a {
   text-decoration: none;
   color: white;
   padding: 20px 50px;
   text-transform: uppercase;
   transition: 0.5s;
 }
-nav a:hover {
+nav .nav-links-container a:hover {
   color: #E00073;
 }
-nav #hamburger {
+nav .nav-links-container #hamburger i {
   color: white;
 }
 
-@media screen and (min-width: 601px) {
-  nav {
-    justify-content: center;
-  }
-
-  #hamburger {
-    display: none;
-  }
-}
 @media screen and (max-width: 600px) {
   nav {
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
     align-items: flex-start;
-    min-height: 50px;
   }
-  nav a {
+  nav .nav-links-container {
+    display: block;
+  }
+  nav .nav-links-container .nav-link {
     padding: 2px 10px;
     display: none;
   }
   nav #hamburger {
+    height: 100%;
     display: block;
+    color: white;
+    padding-right: 15px;
+    padding-top: 15px;
+  }
+  nav #hamburger i {
+    font-size: 28pt;
   }
   nav #hamburger:hover {
     color: #E00073;
     cursor: pointer;
+  }
+}
+@media screen and (min-width: 601px) {
+  nav {
+    justify-content: center;
+  }
+  nav .nav-links-container {
+    display: flex;
+    justify-content: center;
+  }
+  nav .nav-links-container .nav-link {
+    display: flex !important;
+  }
+
+  #hamburger {
+    display: none;
   }
 }
 footer {
