--- a/styles.scss
+++ b/styles.scss
@@ -43,46 +43,51 @@ nav {
     z-index: 10;
     align-items: center;
     background-color: rgba(26, 5, 32, 1.0);
-    a {
-        text-decoration: none; 
-        color: white;
-        padding: 20px 50px;
-        text-transform: uppercase;
-        transition: 0.5s;
+    min-height: 50px;
+    .nav-links-container {
+        a {
+            text-decoration: none; 
+            color: white;
+            padding: 20px 50px;
+            text-transform: uppercase;
+            transition: 0.5s;
+        }
+        a:hover {
+            color: #E00073;
+        }
+        #hamburger {
+            i {
+                color: white;
+            }
+        }
     }
-    a:hover {
-        color: #E00073;
-    }
-    #hamburger {
-        color: white;
-    }
-
+    
 }
 
-@media screen and (min-width: 601px) {
-    nav {
-        justify-content: center;       
-    }
-    #hamburger {
-        display: none;
-    }
-}
 
 @media screen and (max-width: 600px) {
     nav {
         display: flex;
-        flex-direction: column;
+        // flex-direction: column;
+        justify-content: space-between;
         align-items: flex-start;
-        min-height: 50px;
-
-        a {
-            padding: 2px 10px;
-            display: none;
-        }
-        #hamburger {
+        .nav-links-container {
             display: block;
+            .nav-link {
+                padding: 2px 10px;
+                display: none;
+            }
+        }    
+        #hamburger {
+            height: 100%;
+            display: block;
+            color: white;
+            padding-right: 15px;
+            padding-top: 15px;
+            i {
+                font-size: 28pt;
+            }
         }
-
         #hamburger:hover {
             color: #E00073;
             cursor: pointer;
@@ -94,6 +99,21 @@ nav {
     // }
 }
 
+@media screen and (min-width: 601px) {
+    nav {
+        justify-content: center;
+        .nav-links-container {
+            display: flex;
+            justify-content: center;
+            .nav-link {
+                display: flex !important;
+            }
+        }       
+    }
+    #hamburger {
+        display: none;
+    }
+}
 
 footer {
     height: 100px;
