--- a/index.css
+++ b/index.css
@@ -243,7 +243,7 @@ footer a:hover {
 }
 @media screen and (min-width: 900px) {
   .landing {
-    background: linear-gradient(0deg, rgba(26, 5, 32, 0) 0%, rgba(26, 5, 32, 0)), url("images/sunset-5.png");
+    background-image: url("images/sunset-7.png");
     background-size: 100vw;
   }
   .landing .heading-container {
